--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -1308,21 +1308,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'train_RMSE:': 893.0493,\n",
-       " 'train_RMSE_to_mean_ratio': 0.3132365170207229,\n",
-       " 'train_MAE:': 582.7846,\n",
-       " 'test_RMSE:': 882.7965,\n",
-       " 'test_RMSE_to_mean_ratio': 0.3093808258615569,\n",
-       " 'test_MAE:': 603.0447}"
+       "{'train_RMSE:': 902.9004,\n",
+       " 'train_RMSE_to_mean_ratio': 0.31669177544879185,\n",
+       " 'train_MAE:': 590.48975,\n",
+       " 'test_RMSE:': 883.9196,\n",
+       " 'test_RMSE_to_mean_ratio': 0.30977442512176745,\n",
+       " 'test_MAE:': 603.2624}"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 222,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1340,6 +1340,33 @@
     "    cv_folds=5\n",
     ")\n",
     "auto_xgb_no_reduction[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross-validation results (RMSE): \n",
+      "[900.2346, 954.4389, 921.6564, 946.78326, 982.21356]\n",
+      "Mean of cross-validation results (RMSE): 941.0653\n",
+      "Best estimator: xgb_limitdepth\n",
+      "Best configuration: \n",
+      "{'n_estimators': 299, 'max_depth': 5, 'min_child_weight': 0.029662017826552218, 'learning_rate': 0.07038751887026554, 'subsample': 0.7497648121361687, 'colsample_bylevel': 0.8095615698247335, 'colsample_bytree': 0.9105800985735392, 'reg_alpha': 0.0009765625, 'reg_lambda': 27.924348012579685}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Cross-validation results (RMSE): \")\n",
+    "print(auto_xgb_no_reduction[3])\n",
+    "print(\"Mean of cross-validation results (RMSE): \" + str(np.mean(auto_xgb_no_reduction[3])))\n",
+    "print(\"Best estimator: \" + auto_xgb_no_reduction[0].best_estimator)\n",
+    "print(\"Best configuration: \")\n",
+    "print(auto_xgb_no_reduction[0].best_config)"
    ]
   },
   {
@@ -1482,25 +1509,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "xgb_limitdepth\n",
-      "{'n_estimators': 179, 'max_depth': 7, 'min_child_weight': 5.413491856171265, 'learning_rate': 0.051418252557762056, 'subsample': 0.790396724143438, 'colsample_bylevel': 0.9124352343927429, 'colsample_bytree': 0.9414474294855173, 'reg_alpha': 0.0009765625, 'reg_lambda': 30.08026657667215}\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(auto_xgb_no_reduction[0].best_estimator)\n",
-    "print(auto_xgb_no_reduction[0].best_config)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 136,
    "metadata": {},
    "outputs": [
@@ -1533,8 +1541,8 @@
     "\n",
     "I scoured the internet and found two other worked examples that appear to use this dataset:\n",
     "\n",
-    "    Stratascratch: best RMSE: 986.6912510458277, holdout_size: 0.2,\n",
-    "    raihanmasud (github): best RMSE: 1012, holdout_size: 0.33\n",
+    "    Stratascratch: holdout RMSE: 986.6912510458277, holdout_size: 0.2,\n",
+    "    raihanmasud (github): mean cv RMSE: 1030.6837, holdout RMSE: 1012, holdout_size: 0.33\n",
     "\n",
     "Performance statistics for my xgboost model against a holdout sample size of 0.2 are as follows:\n",
     "\n",
@@ -1544,6 +1552,11 @@
     "    'test_RMSE:': 885.064,\n",
     "    'test_RMSE_to_mean_ratio': 0.3108089066798813,\n",
     "    'test_MAE:': 601.20825}\n",
+    "\n",
+    "    Cross-validation results (RMSE): \n",
+    "    [900.2346, 954.4389, 921.6564, 946.78326, 982.21356]\n",
+    "\n",
+    "    Mean of cross-validation results (RMSE): 941.0653\n",
     "\n",
     "Performance statistics for my xgboost model against a holdout size of 0.33:\n",
     "\n",
@@ -2026,8 +2039,6 @@
    "source": [
     "#### Classification + prediction model results\n",
     "\n",
-    "TODO: #12 update with new results\n",
-    "\n",
     "A model trained on the same featureset (sans 'actual_total_delivery_duration' to prevent leakage) but instead asked to label orders with a total delivery duration of 90 minutes or more - rather than predicting the total delivery duration in seconds - produces the following accuracy scores:\n",
     "\n",
     "    {'train_accuracy': 0.9741049605768528, 'test_accuracy': 0.9731716559302767}\n",
@@ -2043,9 +2054,12 @@
     "    'test_RMSE_to_mean_ratio': 0.29843398869023896,\n",
     "    'test_MAE:': 595.4443}\n",
     "\n",
-    "As expected, removing outliers improves the performance of the model. Notably, the RMSE-to-mean ratio for the test/holdout data improved by 7.07% compared to the single-model approach. We are only able to remove outliers because of the strong performance of the classifier model and the small number of orders that would receive a notice rather than an estimate. \n",
+    "    Cross-validation results (RMSE): \n",
+    "    [952.1398, 985.4278, 910.0741, 863.52386, 961.5246]\n",
     "\n",
-    "Note that the test MAE does not significantly decrease compared to the single model approach (626.49835). RMSE is very sensitive to outliers, and one could infer that the single model performs just as well as the two-step model for most of the data based off the lack of change in MAE performance. The improvement in RMSE-to-mean ratio could then be argued to demonstrate an improvement in the efficiency of accurately estimating outliers.\n",
+    "    Mean of cross-validation results (RMSE): 934.53796\n",
+    "    \n",
+    "Despite successfully identifying some outliers there is not a clear improvement in performance over the one-model approach.\n",
     "\n",
     "One other note: I did apply log and standard normalization to the dataset in an attempt to mitigate the effect of the outliers, but normalization had a negligable effect. "
    ]
