updated result write-ups

--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1085,11 +1085,11 @@
     "            eval_stats = {\n",
     "                'train_RMSE:':train_RMSE,\n",
     "                # gives context to the RMSE; the lower the ratio the better\n",
-    "                'train_RMSE_to_mean_ratio':train_RMSE / (np.std(y_train)),\n",
+    "                'train_RMSE_to_std_ratio':train_RMSE / (np.std(y_train)),\n",
     "                'train_MAE:':train_MAE,\n",
     "                'test_RMSE:':test_RMSE,\n",
     "                # gives context to the RMSE; the lower the ratio the better\n",
-    "                'test_RMSE_to_mean_ratio':test_RMSE / (np.std(y_test)),\n",
+    "                'test_RMSE_to_std_ratio':test_RMSE / (np.std(y_test)),\n",
     "                'test_MAE:':test_MAE\n",
     "            }\n",
     "        if task == 'classification':\n",
@@ -1225,11 +1225,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_unscaled_train_test = build_train_test(dataset=train_df,target_feature='actual_total_delivery_duration',test_size=0.33)\n",
+    "base_unscaled_train_test = build_train_test(dataset=train_df,target_feature='actual_total_delivery_duration',test_size=0.2)\n",
     "xtrain_scaled,xtrain_scaler = apply_standard_scaler(base_unscaled_train_test[0])\n",
     "xtest_scaled,xtest_scaler = apply_standard_scaler(base_unscaled_train_test[1])\n",
     "ytrain_scaled,ytest_scaler = apply_standard_scaler(np.array(base_unscaled_train_test[2]).reshape(-1,1))\n",
@@ -1296,33 +1296,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "check Spark installation...This line should appear only once.\n",
-      "\n",
-      "use_spark=True requires installation of PySpark. Please run pip install flaml[spark]\n",
-      "        and check [here](https://spark.apache.org/docs/latest/api/python/getting_started/install.html)\n",
-      "        for more details about installing Spark.\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "{'train_RMSE:': 893.0493,\n",
-       " 'train_RMSE_to_mean_ratio': 0.3132365170207229,\n",
-       " 'train_MAE:': 582.7846,\n",
-       " 'test_RMSE:': 882.7965,\n",
-       " 'test_RMSE_to_mean_ratio': 0.3093808258615569,\n",
-       " 'test_MAE:': 603.0447}"
+       "{'train_RMSE:': 887.5706,\n",
+       " 'train_RMSE_to_std_ratio': 0.7648738206933117,\n",
+       " 'train_MAE:': 584.62286,\n",
+       " 'test_RMSE:': 885.064,\n",
+       " 'test_RMSE_to_std_ratio': 0.7891529468593039,\n",
+       " 'test_MAE:': 601.20825}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1582,10 +1570,10 @@
     "Performance statistics for my xgboost model against a holdout sample size of 0.2 are as follows:\n",
     "\n",
     "    {'train_RMSE:': 887.5706,\n",
-    "    'train_RMSE_to_mean_ratio': 0.3111132719234739,\n",
+    "    'train_RMSE_to_std_ratio': 0.7648738206933117,\n",
     "    'train_MAE:': 584.62286,\n",
     "    'test_RMSE:': 885.064,\n",
-    "    'test_RMSE_to_mean_ratio': 0.3108089066798813,\n",
+    "    'test_RMSE_to_std_ratio': 0.7891529468593039,\n",
     "    'test_MAE:': 601.20825}\n",
     "\n",
     "    Cross-validation results (RMSE): \n",
@@ -1595,17 +1583,21 @@
     "\n",
     "Performance statistics for my xgboost model against a holdout size of 0.33:\n",
     "\n",
-    "    {'train_RMSE:': 893.0493,\n",
-    "    'train_RMSE_to_mean_ratio': 0.3132365170207229,\n",
-    "    'train_MAE:': 582.7846,\n",
-    "    'test_RMSE:': 882.7965,\n",
-    "    'test_RMSE_to_mean_ratio': 0.3093808258615569,\n",
-    "    'test_MAE:': 603.0447}\n",
+    "    {'train_RMSE:': 788.2009,\n",
+    "    'train_RMSE_to_std_ratio': 0.6751852802640116,\n",
+    "    'train_MAE:': 514.18427,\n",
+    "    'test_RMSE:': 879.8502,\n",
+    "    'test_RMSE_to_std_ratio': 0.7838482349221892,\n",
+    "    'test_MAE:': 597.47363}\n",
+    "\n",
+    "Conclusions:\n",
+    "1. The time, effort and expense of building and maintaining a model to predict total delivery time is validated by the comparative performance of the baseline approach.\n",
+    "2. There are two significant differences between my approach to this problem and the two other worked examples I found that I believe explain my superior performance. The first difference is the generic per-store order prep time features; the author of the Stratascratch notebook attempted to predict order prep time and raihanmasud did not bother with prep time at all. The second difference is my use of autoML to do hyperparameter tuning. Raihanmasud hard-coded hyperparameters for their model and the author of the official Stratascratch notebook did not bother with hyperparameter tuning at all.\n",
     "\n",
     "Other observations:\n",
     "1. The basic store order preparation time features are the most significant distinction between my model/pipeline and the other available solutions to this challenge.\n",
-    "2. Ratio features and store order preparation time features make up six of the top fifteen features and five of the top ten features when ranked by importance. per the graph below there is also a visible increase in the delivery duration when the onshift-to-outstanding ratio decreases, either from high order volumes or low Dasher counts.\n",
-    "3. The table of category prep time metrics do not show up in the feature importance table, so those features can probably be left out of the final pipeline. \n"
+    "2. Ratio features and store order preparation time features make up eight of the top fifteen features and five of the top ten features when ranked by importance. per the graph below there is also a visible increase in the delivery duration when the onshift-to-outstanding ratio decreases, either from high order volumes or low Dasher counts.\n",
+    "3. The table of category prep time metrics do not appear to have a significant effect on estimation, so those features can be left out of the final pipeline. \n"
    ]
   },
   {
@@ -1839,7 +1831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1871,72 +1863,72 @@
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>onshift_to_outstanding</td>\n",
-       "      <td>0.114982</td>\n",
+       "      <td>0.061579</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>115</th>\n",
        "      <td>created_hour_of_day__2</td>\n",
-       "      <td>0.063831</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>store_est_median_total_prep_time</td>\n",
-       "      <td>0.052155</td>\n",
+       "      <td>0.058148</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>est_time_non-prep</td>\n",
-       "      <td>0.050731</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>busy_to_outstanding</td>\n",
-       "      <td>0.035239</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>116</th>\n",
-       "      <td>created_hour_of_day__3</td>\n",
-       "      <td>0.035183</td>\n",
+       "      <td>0.049070</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>114</th>\n",
        "      <td>created_hour_of_day__1</td>\n",
-       "      <td>0.029889</td>\n",
+       "      <td>0.038747</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>store_est_time_prep_per_item_mean</td>\n",
-       "      <td>0.029025</td>\n",
+       "      <th>27</th>\n",
+       "      <td>store_est_median_total_prep_time</td>\n",
+       "      <td>0.033633</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>109</th>\n",
-       "      <td>order_protocol__4.0</td>\n",
-       "      <td>0.020647</td>\n",
+       "      <th>116</th>\n",
+       "      <td>created_hour_of_day__3</td>\n",
+       "      <td>0.031672</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>100</th>\n",
-       "      <td>market_id__1.0</td>\n",
-       "      <td>0.019343</td>\n",
+       "      <th>95</th>\n",
+       "      <td>clean_store_primary_category__thai</td>\n",
+       "      <td>0.027598</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>busy_to_outstanding</td>\n",
+       "      <td>0.020966</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>clean_store_primary_category__alcohol</td>\n",
+       "      <td>0.020887</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>118</th>\n",
+       "      <td>created_hour_of_day__5</td>\n",
+       "      <td>0.020108</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                              features  importance\n",
-       "16              onshift_to_outstanding    0.114982\n",
-       "115             created_hour_of_day__2    0.063831\n",
-       "27    store_est_median_total_prep_time    0.052155\n",
-       "10                   est_time_non-prep    0.050731\n",
-       "15                 busy_to_outstanding    0.035239\n",
-       "116             created_hour_of_day__3    0.035183\n",
-       "114             created_hour_of_day__1    0.029889\n",
-       "20   store_est_time_prep_per_item_mean    0.029025\n",
-       "109                order_protocol__4.0    0.020647\n",
-       "100                     market_id__1.0    0.019343"
+       "                                  features  importance\n",
+       "16                  onshift_to_outstanding    0.061579\n",
+       "115                 created_hour_of_day__2    0.058148\n",
+       "10                       est_time_non-prep    0.049070\n",
+       "114                 created_hour_of_day__1    0.038747\n",
+       "27        store_est_median_total_prep_time    0.033633\n",
+       "116                 created_hour_of_day__3    0.031672\n",
+       "95      clean_store_primary_category__thai    0.027598\n",
+       "15                     busy_to_outstanding    0.020966\n",
+       "31   clean_store_primary_category__alcohol    0.020887\n",
+       "118                 created_hour_of_day__5    0.020108"
       ]
      },
-     "execution_count": 220,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1978,15 +1970,21 @@
     "    'test_accuracy': 0.9739740308975453,\n",
     "    'test_roc_auc': 0.851748183623488}\n",
     "\n",
-    "Note that the above accuracy scores are for the entire dataset - the classifier model only identified 1235 'outliers' when the dataset actually contained 4815 records with a total delivery duration of 90 minutes or more. Of those 1235 observations/orders, 1101 (89.15%) were correctly labeled and 134 (10.85%) were incorrectly labeled. A success rate of 22.89% may not seem very good prima-facie, but we must contextualize it against the business value of an innacurate delivery time estimation. Unfortunately that is context we do not have, but we can look at the RMSE of that sub-population to get a sense of the risk of being exposed to a high-error estimation:\n",
+    "Note that the above accuracy scores are for the entire dataset - the classifier model only identified 1235 'outliers' when the dataset actually contained 4815 records with a total delivery duration of 90 minutes or more. Of those 1235 observations/orders, 1101 (89.15%) were correctly labeled and 134 (10.85%) were incorrectly labeled. A success rate of 22.89% may not seem very good prima-facie, but we must contextualize it against the business value of a highly-varied delivery time estimation. Unfortunately that is context we do not have, but we can look at the RMSE of that sub-population to get a sense of the risk of being exposed to a high-error estimation:\n",
+    "\n",
+    "    RMSE: 2830.3252\n",
+    "    actual_total_delivery_duration_std: 1669.198608\n",
+    "    RMSE_to_std_ratio: 1.6956191950047\n",
+    "\n",
+    "When we use the single model to predict delivery times, the resulting RMSE is more than three times that of the cross-validated RMSE for that same model. That subset of customers would be exposed to wildly innaccurate delivery time estimates if their orders were passed through the single model, but instead they receive a general estimate that can be updated as more information becomes available.\n",
     "\n",
     "Dropping the orders predicted to take at least 90 minutes and then training a total delivery duration model with that trimmed dataset produces the following metrics:\n",
     "\n",
     "    {'train_RMSE:': 796.4691,\n",
-    "    'train_RMSE_to_mean_ratio': 0.7244603084789062,\n",
+    "    'train_RMSE_to_std_ratio': 0.7244603084789062,\n",
     "    'train_MAE:': 560.23395,\n",
     "    'test_RMSE:': 925.7513,\n",
-    "    'test_RMSE_to_mean_ratio': 0.8202203959422003,\n",
+    "    'test_RMSE_to_std_ratio': 0.8202203959422003,\n",
     "    'test_MAE:': 599.6005}\n",
     "\n",
     "    Cross-validation results (RMSE): \n",
@@ -1994,11 +1992,13 @@
     "\n",
     "    Mean of cross-validation results (RMSE): 892.076\n",
     "    \n",
-    "Was the two-step approach successful? How do we judge success? RMSE is sensitive to outliers so we cannot make a direct comparison between those values because we have removed outliers. A better judge of performance is the RMSE-to-standard-deviation ratio, which contextualizes the error rate against the standard deviation of y-true. The lower the value the better; a value over 1 can be considered a 'red-flag' in that the model's error produces more variance than the real data.  \n",
+    "Was the two-step approach successful? How do we judge success? \n",
     "\n",
-    "Comparing the cross-validated mean RMSE scores for the single model and top-coded approach does not clearly place one approach's performance over the other: 0.8383824279249971 versus 0.7903871037798416\n",
+    "RMSE is sensitive to outliers so we cannot make a direct comparison between those values because we have removed outliers. A better judge of performance is the RMSE-to-standard-deviation ratio, which contextualizes the error rate against the standard deviation of y-true. The lower the value the better; a value over 1 can be considered a 'red-flag' in that the model's error produces more variance than the real data.  \n",
     "\n",
-    "One other note: I did apply log and standard normalization to the dataset in an attempt to mitigate the effect of the outliers, but normalization had a negligable effect. "
+    "Comparing the cross-validated mean RMSE scores for the single model and top-coded approach does not clearly place one approach's performance over the other: 0.8383824279249971 for the former versus 0.7903871037798416 for the latter.\n",
+    "\n",
+    "One other note: I did apply log and standard normalization to the dataset in an attempt to mitigate the effect of the outliers, but normalization/standardization had little to no effect on performance."
    ]
   },
   {
