updated first-pass model, results w/ new features

--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -1100,9 +1100,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 148,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'train_RMSE:': 0.74186766,\n",
+       " 'train_RMSE_to_std_ratio': 0.74186766,\n",
+       " 'train_MAE:': 0.48305067,\n",
+       " 'test_RMSE:': 0.7729981,\n",
+       " 'test_RMSE_to_std_ratio': 0.7729981,\n",
+       " 'test_MAE:': 0.5281222}"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "scaled_base_model = ApplyMethod_autoML(\n",
     "    x_train=xtrain_scaled,\n",
@@ -1113,7 +1129,7 @@
     "    metric='mse',\n",
     "    estimator_list=['xgboost','xgb_limitdepth'],\n",
     "    task='regression',\n",
-    "    run_cv=True,\n",
+    "    run_cv=False,\n",
     "    cv_folds=5\n",
     ")\n",
     "scaled_base_model[2]"
@@ -1121,16 +1137,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "881.3649"
+       "872.52985"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1393,7 +1409,9 @@
     "Other observations:\n",
     "1. The basic store order preparation time and market+hour aggregated ratio features are the most significant distinction between my model/pipeline and the other available solutions to this challenge.\n",
     "2. Ratio features and store order preparation time features make up eleven of the top fifteen features and eight of the top ten features when ranked by importance. per the graph below there is also a visible increase in the delivery duration when the onshift-to-outstanding ratio decreases, either from high order volumes or low Dasher counts.\n",
-    "3. The table of category prep time metrics do not appear to have a significant effect on estimation, so those features can be left out of the final pipeline. \n"
+    "3. The table of category prep time metrics do not appear to have a significant effect on estimation, so those features can be left out of the final pipeline. \n",
+    "4. Variance and independent population analysis confirmed that most of the markets have different hourly average order volumes, but the second-most important feature to the model so far is 'hour_mean_total_outstanding_orders', a basic average aggregation of order volumes across all markets.\n",
+    "5. Normalizing the dataset with a scaler does not produce a significantly better RMSE against the same holdout/test dataset (scaled RMSE 872.52985, unscaled RMSE 876.9018) despite taking longer to train a model.\n"
    ]
   },
   {
