--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,6 @@
     "import scipy.stats as stats\n",
     "import matplotlib.pyplot as plt\n",
     "from datetime import datetime as dt\n",
-    "from datetime import timedelta\n",
     "\n",
     "from statsmodels.stats.outliers_influence import variance_inflation_factor\n",
     "from statsmodels.stats.diagnostic import het_white\n",
@@ -68,55 +67,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Unnamed: 0', 'total_items', 'subtotal', 'num_distinct_items',\n",
-       "       'min_item_price', 'max_item_price', 'total_onshift_dashers',\n",
-       "       'total_busy_dashers', 'total_outstanding_orders',\n",
-       "       'estimated_order_place_duration',\n",
-       "       ...\n",
-       "       'created_hour_of_day__22', 'created_hour_of_day__23',\n",
-       "       'created_day_of_week__0', 'created_day_of_week__1',\n",
-       "       'created_day_of_week__2', 'created_day_of_week__3',\n",
-       "       'created_day_of_week__4', 'created_day_of_week__5',\n",
-       "       'created_day_of_week__6', 'latest_update'],\n",
-       "      dtype='object', length=156)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "## NOTE that all feature engineering functions can be found in doordash_feature_eng.py\n",
-    "train_df = pd.read_csv('train_df.csv')\n",
-    "train_df = train_df.drop(columns='Unnamed: 0')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## update types\n",
-    "## create target variable\n",
-    "def addFeatures_durations(historical_data:pd.DataFrame) -> pd.DataFrame:\n",
-    "    try:\n",
-    "        historical_data['created_at'] = pd.to_datetime(historical_data['created_at'])\n",
-    "        historical_data['actual_delivery_time'] = pd.to_datetime(historical_data['actual_delivery_time'])\n",
-    "        ## calculate delivery duration\n",
-    "        historical_data['actual_total_delivery_duration'] = (historical_data['actual_delivery_time'] - historical_data['created_at']).dt.total_seconds()\n",
-    "        ## estimated time spent outside the store/not on order preparation\n",
-    "        historical_data['est_time_non-prep'] = historical_data['estimated_order_place_duration'] + historical_data['estimated_store_to_consumer_driving_duration']\n",
-    "    except Exception as ex:\n",
-    "        raise ex\n",
-    "    return historical_data"
+    "## NOTE that all feature engineering functions can be found in doordash_feature_eng.py\n",
+    "train_df = pd.read_csv('train_df.csv')\n",
+    "train_df = train_df.drop(columns=['Unnamed: 0','latest_update'])"
    ]
   },
   {
@@ -953,7 +910,7 @@
    ],
    "source": [
     "# does the first attempt at modeling improve on a baseline, average-derived model?\n",
-    "createBaseline(historical_data=historical_data)"
+    "createBaseline(historical_data=train_df)"
    ]
   },
   {
