--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,6 +309,15 @@
     "    except Exception as ex:\n",
     "        raise ex\n",
     "    return x_train_pca,x_test_pca"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train,x_holdout,y_train,y_holdout = build_train_test(dataset=train_df,target_feature='actual_total_delivery_duration',test_size=0.2)"
    ]
   },
   {
@@ -388,24 +397,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pca_xtrain,pca_xtest,pca_ytrain,pca_ytest = build_train_test(dataset=train_df,target_feature='actual_total_delivery_duration',test_size=0.2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 192,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xtrain_pca,xtest_pca = PCAcalc_dim_reduction(\n",
-    "    x_train=pca_xtrain,\n",
-    "    x_test=pca_xtest,\n",
-    "    desired_components=len(PCAcalc_expl_var(x_train=pca_xtrain,target_expl_variance=0.9)[0])\n",
-    ")"
+    "x_train_pca,x_test_pca = PCAcalc_dim_reduction(x_train=x_train,x_test=x_holdout,desired_components=len(PCAcalc_expl_var(x_train=x_train,target_expl_variance=0.9)[0]))"
    ]
   },
   {
@@ -453,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,31 +558,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "check Spark installation...This line should appear only once.\n",
+      "\n",
+      "use_spark=True requires installation of PySpark. Please run pip install flaml[spark]\n",
+      "        and check [here](https://spark.apache.org/docs/latest/api/python/getting_started/install.html)\n",
+      "        for more details about installing Spark.\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "{'train_RMSE:': 931.81287,\n",
-       " 'train_RMSE_to_mean_ratio': 0.3266211655207943,\n",
-       " 'train_MAE:': 616.80505,\n",
-       " 'test_RMSE:': 922.12134,\n",
-       " 'test_RMSE_to_mean_ratio': 0.3238223636661371,\n",
-       " 'test_MAE:': 633.7323}"
+       "{'train_RMSE:': 962.5722570423924,\n",
+       " 'train_RMSE_to_std_ratio': 0.8285083410025038,\n",
+       " 'train_MAE:': 638.1465428280734,\n",
+       " 'test_RMSE:': 920.4128753844813,\n",
+       " 'test_RMSE_to_std_ratio': 0.8234671095960912,\n",
+       " 'test_MAE:': 640.1305807838371}"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pca_regressions = ApplyMethod_autoML(\n",
-    "    x_train=xtrain_pca,\n",
-    "    x_test=xtest_pca,\n",
-    "    y_train=pca_ytrain,\n",
-    "    y_test=pca_ytest,\n",
+    "    x_train=x_train_pca,\n",
+    "    x_test=x_test_pca,\n",
+    "    y_train=y_train,\n",
+    "    y_test=y_holdout,\n",
     "    time_budget=180,\n",
     "    metric='mse',\n",
     "    estimator_list=['xgb_gamma','xgboost','xgb_limitdepth'],\n",
