added ensemble trainer

--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -855,7 +855,22 @@
    "cell_type": "code",
    "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<flaml.automl.model.XGBoostLimitDepthEstimator at 0x2d4b45e3280>,\n",
+       " <flaml.automl.model.XGBoostLimitDepthEstimator at 0x2d4b465adc0>,\n",
+       " <flaml.automl.model.XGBoostLimitDepthEstimator at 0x2d4b45e3490>,\n",
+       " <flaml.automl.model.XGBoostLimitDepthEstimator at 0x2d48daf35b0>,\n",
+       " <flaml.automl.model.XGBoostSklearnEstimator at 0x2d4b45e7790>]"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "auto_xgb_cv = ApplyMethod_autoML_cv_ensemble(\n",
     "    x_train=x_train,\n",
@@ -869,6 +884,29 @@
     "    cv_folds=5\n",
     ")\n",
     "auto_xgb_cv[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE scores of cv models against holdout: \n",
+      "[842.1314633393378, 840.0196979261668, 840.8673760719671, 839.4876240369017, 840.9323899450047]\n",
+      "Average RMSE score (ensemble score): \n",
+      "840.6877102638757\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('RMSE scores of cv models against holdout: ')\n",
+    "print(auto_xgb_cv[1])\n",
+    "print('Average RMSE score (ensemble score): ')\n",
+    "print(np.mean(auto_xgb_cv[1]))"
    ]
   },
   {
@@ -1062,17 +1100,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## first and foremost, is this model worth building? Is in-store time an important feature?\n",
-    "x_train['est_order_total_prep_time'] = x_train['actual_total_delivery_duration'] - x_train['est_time_non-prep']\n",
-    "x_holdout['est_order_total_prep_time'] = x_holdout['actual_total_delivery_duration'] - x_holdout['est_time_non-prep']"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 178,
    "metadata": {},
    "outputs": [
@@ -1094,14 +1121,15 @@
    ],
    "source": [
     "## first and foremost, is this model worth building? Is in-store time an important feature?\n",
-    "x_train['est_order_total_prep_time'] = x_train['actual_total_delivery_duration'] - x_train['est_time_non-prep']\n",
-    "x_holdout['est_order_total_prep_time'] = x_holdout['actual_total_delivery_duration'] - x_holdout['est_time_non-prep']\n",
+    "train,test = x_train.join(y_train),x_holdout.join(y_holdout)\n",
+    "train['est_order_total_prep_time'] = train['actual_total_delivery_duration'] - train['est_time_non-prep']\n",
+    "test['est_order_total_prep_time'] = test['actual_total_delivery_duration'] - test['est_time_non-prep']\n",
     "\n",
     "hypoth_feature_importances = ApplyMethod_autoML(\n",
-    "    x_train=hypoth_xtrain,\n",
-    "    x_test=hypoth_xtest,\n",
-    "    y_train=hypoth_ytrain,\n",
-    "    y_test=hypoth_ytest,\n",
+    "    x_train=train,\n",
+    "    x_test=test,\n",
+    "    y_train=y_train,\n",
+    "    y_test=y_holdout,\n",
     "    time_budget=60,\n",
     "    metric='mse',\n",
     "    estimator_list=['xgb_gamma','xgboost'],\n",
