added pickle process to automl function

--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -24,13 +24,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "import warnings\n",
     "warnings.simplefilter(action='ignore',category=FutureWarning)\n",
     "\n",
+    "import pickle\n",
     "import pandas as pd\n",
     "import pyarrow as pa\n",
     "import numpy as np\n",
@@ -41,14 +42,10 @@
     "from statsmodels.stats.outliers_influence import variance_inflation_factor\n",
     "from statsmodels.stats.diagnostic import het_white\n",
     "from statsmodels.tools import add_constant\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.model_selection import KFold\n",
-    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import train_test_split,KFold,cross_val_score\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.preprocessing import StandardScaler,MinMaxScaler\n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "from sklearn.metrics import mean_absolute_error\n",
-    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
     "from sklearn.metrics import accuracy_score,roc_auc_score,log_loss\n",
     "from scipy import stats\n",
     "\n",
@@ -67,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,51 +411,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## applicator function for ML methods\n",
-    "\n",
-    "def applyMethod_make_regression(x_train,y_train,x_test,y_test,model):\n",
-    "    try:\n",
-    "        model.fit(x_train,y_train)\n",
-    "        ## train error\n",
-    "        y_hat_train = model.predict(x_train)\n",
-    "        train_RMSE = mean_squared_error(y_true=y_train,y_pred=y_hat_train,squared=False)\n",
-    "        train_MAE = mean_absolute_error(y_true=y_train,y_pred=y_hat_train)\n",
-    "        ## test error\n",
-    "        y_hat_test = model.predict(x_test)\n",
-    "        test_RMSE = mean_squared_error(y_true=y_test,y_pred=y_hat_test,squared=False)\n",
-    "        test_MAE = mean_absolute_error(y_true=y_test,y_pred=y_hat_test)\n",
-    "        eval_stats = {\n",
-    "            'train_RMSE:':train_RMSE,\n",
-    "            # gives context to the RMSE; the lower the ratio the better\n",
-    "            'train_RMSE_to_mean_ratio':train_RMSE / (np.mean(y_train)),\n",
-    "            'train_MAE:':train_MAE,\n",
-    "            'test_RMSE:':test_RMSE,\n",
-    "            # gives context to the RMSE; the lower the ratio the better\n",
-    "            'test_RMSE_to_mean_ratio':test_RMSE / (np.mean(y_test)),\n",
-    "            'test_MAE:':test_MAE\n",
-    "        }\n",
-    "        trained_model = model\n",
-    "    except Exception as ex:\n",
-    "        raise ex\n",
-    "    return trained_model,y_hat_test,eval_stats"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def ApplyMethod_autoML_cv_ensemble(x_train,x_test,y_train,y_test,time_budget=int,metric=str,estimator_list=list,task=str,cv_folds=int):\n",
+    "def ApplyMethod_autoML_cv_ensemble(x_train,x_test,y_train,y_test,time_budget=int,metric=str,estimator_list=list,task=str,cv_folds=int,model_name:str):\n",
     "    auto_ml = AutoML()\n",
     "    kf = KFold(n_splits=cv_folds,random_state=42,shuffle=True)\n",
     "    cv_scores = []\n",
     "    cv_holdout_scores = []\n",
-    "    cv_models = []\n",
     "## recall that the actual_total_delivery_time data is gamma distributed\n",
     "    class xgbGamma(XGBoostEstimator):\n",
     "        def __init__(self, task=\"regression\", **config):\n",
@@ -471,7 +432,8 @@
     "                cv_ytrain,cv_ytest = y_train.iloc[train_index],y_train.iloc[test_index]\n",
     "                auto_ml.fit(X_train=cv_xtrain,y_train=cv_ytrain,time_budget=time_budget,metric=metric,estimator_list=estimator_list,task=task,seed=42,verbose=0)\n",
     "                ## store the model\n",
-    "                cv_models.append(auto_ml.model)\n",
+    "                with open(f'model_pickles/{str(dt.today())}_automl_{model_name}.pkl','wb') as f:\n",
+    "                    pickle.dump(auto_ml.model,f,pickle.HIGHEST_PROTOCOL)\n",
     "                cv_yhat = auto_ml.predict(cv_xtest)\n",
     "                holdout_yhat = auto_ml.predict(x_test)\n",
     "                if task == 'regression':\n",
@@ -484,12 +446,12 @@
     "                    cv_holdout_scores.append(accuracy_score(y_true=y_test,y_pred=cv_yhat))\n",
     "    except Exception as ex:\n",
     "        raise ex\n",
-    "    return cv_scores,cv_holdout_scores,cv_models"
+    "    return cv_scores,cv_holdout_scores"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
